@startuml

package "factory" {
	interface "Handler" as factory.Handler {
		+GetName(): string
		+Sink()
	}
}



package "factory" {
	interface "LogFactory" as factory.LogFactory {
		+Create(name: string): factory.Handler
		-createHandler(name: string): factory.Handler
		-registerHandler(h: factory.Handler)
	}
}


	factory.LogFactory ..> factory.Handler : <<return>> 

package "factory" {
	interface "LogFactorySimple" as factory.LogFactorySimple {
		+Use()
	}
}



package "factory" {
	class "LogFile" as factory.LogFile <<E,#FFCC00>> {
		+Use()
	}
}



package "factory" {
	class "LogFileFactory" as factory.LogFileFactory <<E,#FFCC00>> {
		-handlers: []factory.Handler
		+Create(name: string): factory.Handler
		-createHandler(name: string): factory.Handler
		-registerHandler(h: factory.Handler)
	}
}

	factory.LogFileFactory --> factory.Handler

	factory.LogFileFactory ..> factory.Handler : <<return>> 

package "factory" {
	class "LogFileHandler" as factory.LogFileHandler <<E,#FFCC00>> {
		-name: string
		+GetName(): string
		+Sink()
	}
}



package "factory" {
	class "LogMQ" as factory.LogMQ <<E,#FFCC00>> {
		+Use()
	}
}



package "factory" {
	class "LogStdOut" as factory.LogStdOut <<E,#FFCC00>> {
		+Use()
	}
}



package "factory" {
	class "LogStdOutFactory" as factory.LogStdOutFactory <<E,#FFCC00>> {
		-handlers: []factory.Handler
		+Create(name: string): factory.Handler
		-createHandler(name: string): factory.Handler
		-registerHandler(h: factory.Handler)
	}
}

	factory.LogStdOutFactory --> factory.Handler

	factory.LogStdOutFactory ..> factory.Handler : <<return>> 

package "factory" {
	class "LogStdOutHandler" as factory.LogStdOutHandler <<E,#FFCC00>> {
		-name: string
		+GetName(): string
		+Sink()
	}
}



	factory.LogFile -up-|> factory.LogFactorySimple
	factory.LogFileFactory -up-|> factory.LogFactory
	factory.LogFileHandler -up-|> factory.Handler
	factory.LogMQ -up-|> factory.LogFactorySimple
	factory.LogStdOut -up-|> factory.LogFactorySimple
	factory.LogStdOutFactory -up-|> factory.LogFactory
	factory.LogStdOutHandler -up-|> factory.Handler


@enduml
